--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 @layer base {
   html {
     font-family: 'Poppins', system-ui, sans-serif;
+    overflow-x: hidden;
+    max-width: 100vw;
   }
 }
 
@@ -35,6 +37,8 @@ body {
   min-height: 100vh;
   background-color: white;
   color: #213547;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 a {
